--- a/00-intro.ipynb
+++ b/00-intro.ipynb
@@ -39,7 +39,7 @@
     "    * Jupyter [(o futuro das publicações científicas)](https://www.theatlantic.com/science/archive/2018/04/the-scientific-paper-is-obsolete/556676/)\n",
     "    * [Breve tutorial de Markdown](./04-markdown.ipynb)\n",
     "9.  [A expansão em serie de Taylor, diferenciação numérica](05-taylor-series.ipynb)\n",
-    "10. Integração numérica\n",
+    "10. [Integração numérica](06-Integracao-numerica.ipynb)\n",
     "<img src=\"Figs/Integral_as_region_under_curve.png\" width=50% >\n",
     "11. Prova prática 1\n",
     "15. Ajuste de curvas: minimos quadrados, regressão linear\n",
@@ -144,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
