--- a/09a-interpolacao-Lagrange.ipynb
+++ b/09a-interpolacao-Lagrange.ipynb
@@ -184,6 +184,7 @@
    "outputs": [],
    "source": [
     "# Neville Algorithm:\n",
+    "#\n",
     "# O algoritmo tem 3 partes, \n",
     "# Na primeira encontra o indice mais proximo do\n",
     "# valor de x onde se quer estimar f(x)\n",
@@ -207,9 +208,8 @@
     "    y = ya[ns]\n",
     "    ns = ns-1\n",
     "    \n",
-    "    # Segunda parte: calcula os polinomios de esquerda \n",
-    "    # a direita\n",
-    "    # no loop mais externo m vai desde o primeiro ponto, m=0\n",
+    "    # Segunda parte: calcula os polinomios C e D de esquerda \n",
+    "    # a direita, no loop mais externo m vai desde o primeiro ponto, m=0\n",
     "    # até o penultimo ponto n-2\n",
     "    for m in range(n-1):\n",
     "        # o loop interno inicialmente tem n-1 elementos\n",
