--- a/09b-cubic_splines.ipynb
+++ b/09b-cubic_splines.ipynb
@@ -243,12 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'interpolate' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-17fc4d074802>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# c são os coeficientes, e k a ordem\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mtck\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minterpolate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplrep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'interpolate' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# A função splrep calcula a representação dos splines\n",
-    "# a saida é uma tubla que tem (t,c,k), t são so pontos \n",
+    "# a saida é uma tupla que tem (t,c,k), t são so pontos \n",
     "# c são os coeficientes, e k a ordem\n",
     "\n",
     "tck = interpolate.splrep(x, y, s=0)"
@@ -313,6 +325,31 @@
     "plt.plot(xnovo,ycs_1der,label='1a derivada',lw=2)\n",
     "plt.plot(xnovo,ycs_2der,label='2a derivada',lw=2)\n",
     "plt.legend(loc=2,ncol=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Atividade\n",
+    "\n",
+    "Vamos interpolar a função de Runge, $f(x) = \\frac{1}{1+25x^2}$, num conjunto de $n$ nós regularmente espaçados\n",
+    "\n",
+    "$$\n",
+    "x_k = -1 + \\frac{2(k-1)}{n-1}, \\; \\; k = 1,2, \\ldots , n\n",
+    "$$\n",
+    "\n",
+    "1. Considere $n = 5, 11, 21, 30$ e calcule os polinomios de intepolação de Lagrange $P_N (x)$ para 41 pontos regularmente espaçados.\n",
+    "\n",
+    "2. Calcule o erro específico no cálculo usando $\\epsilon = \\frac{f(x) - P_N(x)}{f(x)}$. \n",
+    "\n",
+    "2. Aumente o número de pontos conhecidos de 4 para 6 e para 8, descreva o resultado.  Aumentar o número de pontos melhora o resultado?\n",
+    "\n",
+    "3. Agora utilize *splines* cúbicos e calcule o polinomio de interpolação $S(x)$ para 41 pontos regularmente espaçados. Os pontos conhecidos iniciais são os 4 do ponto 1. Repita para 6 e para 8 pontos igualmente espaçados. \n",
+    "\n",
+    "4. Calcule o erro, $\\epsilon = \\frac{f(x) - S(x)}{f(x)}$. O aumento de número de pontos conhecidos melhora a interpolação?\n",
+    "\n",
+    "5. Pode disser alguma coisa sobre qual método é melhor para interpolar a função de Runge?"
    ]
   },
   {
