--- a/00-intro.ipynb
+++ b/00-intro.ipynb
@@ -42,8 +42,8 @@
     "10. [Integração numérica](06-Integracao-numerica.ipynb)\n",
     "<img src=\"Figs/Integral_as_region_under_curve.png\" width=50% >\n",
     "11. Prova prática 1\n",
-    "15. Ajuste de curvas: minimos quadrados, regressão linear\n",
-    "12. Graficando em Python 1: matplotlib\n",
+    "15. [Ajuste de curvas: minimos quadrados, regressão linear](07-Regressao-linear.ipynb)\n",
+    "12. [Leitura e escritura de dados](08-leitura_escritura.ipynb)\n",
     "[(anatomia de matplotlib)](https://github.com/matplotlib/AnatomyOfMatplotlib)\n",
     "14. Graficando em Python 2\n",
     "<img src=\"Figs/Curve_fitting.png\" width=50% >\n",
@@ -52,8 +52,8 @@
     "<img src=\"Figs/contour-cmb.png\" width=50% >\n",
     "\n",
     "18. Gráficos 3D\n",
-    "19. Interpolação e extrapolação 1\n",
-    "20. Interpolação e extrapolação 2\n",
+    "19. [Interpolação e extrapolação 1](09a-interpolacao-Lagrange.ipynb)\n",
+    "20. [Interpolação e extrapolação 2](09b-cubic_splines.ipynb)\n",
     "<img src=\"Figs/extrapolation-points.png\" width=50% >\n",
     "21. Prova prática 2\n",
     "22. Algebra matricial 1\n",
