--- a/10-algebra-linear.ipynb
+++ b/10-algebra-linear.ipynb
@@ -1150,11 +1150,384 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculando a inversa de uma matriz\n",
+    "\n",
+    "Encontre a inversa da matriz\n",
+    "\n",
+    "$$\n",
+    "A = \\begin{bmatrix}\n",
+    "     1 & 3 & 4\\\\\n",
+    "     3 & 4 & 6\\\\\n",
+    "     4 & 6 & 8\\\\\n",
+    "     \\end{bmatrix},\n",
+    "$$\n",
+    "\n",
+    "Para encontrar a inversa usamos `scipy.linalg`,"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import scipy.linalg\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[1.,3.,4.],[3.,4.,6.],[4.,6.,8.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P, L, U = scipy.linalg.lu(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [1., 0., 0.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.        ,  0.        ],\n",
+       "       [ 0.25      ,  1.        ,  0.        ],\n",
+       "       [ 0.75      , -0.33333333,  1.        ]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4.        , 6.        , 8.        ],\n",
+       "       [0.        , 1.5       , 2.        ],\n",
+       "       [0.        , 0.        , 0.66666667]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 4.        ,  6.        ,  8.        ],\n",
+       "        [ 0.25      ,  1.5       ,  2.        ],\n",
+       "        [ 0.75      , -0.33333333,  0.66666667]]),\n",
+       " array([2, 2, 2], dtype=int32))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LU = scipy.linalg.lu_factor(A)\n",
+    "LU"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para encontrar a inversa resolvemos o sistema\n",
+    "\n",
+    "$$\n",
+    "{\\bf LUA}^{-1} = {\\bf I} \\;.\n",
+    "$$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=3\n",
+    "I = np.zeros_like(A)\n",
+    "for i in range (n):\n",
+    "    I[i,i] = 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ainv = scipy.linalg.lu_solve(LU, I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.00000000e+00,  0.00000000e+00,  5.00000000e-01],\n",
+       "       [ 2.96059473e-16, -2.00000000e+00,  1.50000000e+00],\n",
+       "       [ 5.00000000e-01,  1.50000000e+00, -1.25000000e+00]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ainv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para verificar que é a inversa de ${\\bf A}$ usamos `matmul`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.matmul(A,Ainv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Agora vamos encontrar a inversa de uma matriz $4 \\times 4$,**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = np.array([[1.,1.,1.,-1],[1.,1.,-1.,1.],[1.,-1.,1.,1.],[-1.,1.,1.,1.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  1.,  1., -1.],\n",
+       "       [ 1.,  1., -1.,  1.],\n",
+       "       [ 1., -1.,  1.,  1.],\n",
+       "       [-1.,  1.,  1.,  1.]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LUB = scipy.linalg.lu_factor(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 1.,  1.,  1., -1.],\n",
+       "        [ 1., -2.,  0.,  2.],\n",
+       "        [ 1., -0., -2.,  2.],\n",
+       "        [-1., -1., -1.,  4.]]), array([0, 2, 2, 3], dtype=int32))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LUB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=4\n",
+    "I = np.zeros_like(B)\n",
+    "for i in range (n):\n",
+    "    I[i,i] = 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Binv = scipy.linalg.lu_solve(LUB, I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.25,  0.25,  0.25, -0.25],\n",
+       "       [ 0.25,  0.25, -0.25,  0.25],\n",
+       "       [ 0.25, -0.25,  0.25,  0.25],\n",
+       "       [-0.25,  0.25,  0.25,  0.25]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Binv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.matmul(B,Binv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Atividade \n",
+    "\n",
+    "Utilize decomposição LU para resolver o sistema de equações derivado para resolver o  problema de mecânica apresentado na figura seguinte, \n",
+    "\n",
+    "<img src=\"Figs/Image165.gif\" width=70% >\n",
+    "\n",
+    "Escreva as equações que mantém o sistema estatico, e encontre as forçãs $F_1$, $F_2$ e $F_3$.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scipy.linalg.lu_solve?"
+   ]
   }
  ],
  "metadata": {
