--- a/EDO2.ipynb
+++ b/EDO2.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,13 +72,13 @@
     "As equações que governam o movimento são as seguinte:\n",
     "\n",
     "$$\n",
-    "\\frac{d^2x}{dt^2} = 0 \\; \\;, \\frac{d^2y}{dt^2} =0 \\; \\;, \\frac{d^2z}{dt^2} = -\\frac{g}{m}\n",
+    "\\frac{d^2x}{dt^2} = 0\\; \\;, \\frac{d^2y}{dt^2} =0 \\; \\;, \\frac{d^2z}{dt^2} = -g\n",
     "$$\n",
     "\n",
     "Para facilitar o problema podemos podemos trabalhar em duas dimensões, $x$ e $y$. Convertimos também as equações de segunda ordem em duas equaçòes de primeira ordem.\n",
     "\n",
     "$$\n",
-    "\\frac{d v_x}{dt} = 0 \\; \\;,  \\frac{d v_z}{dt} = -\\frac{g}{m}\n",
+    "\\frac{d v_x}{dt} = 0 \\; \\;,  \\frac{d v_z}{dt} = -g\n",
     "$$\n",
     "\n",
     "$$\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -216,6 +216,29 @@
     "    plt.gcf().clear()\n",
     "    time.sleep(0.0001)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uma forma conhecida de força de atrito que pode freiar o projetil é proporcional à velocidade do projetil elevada a uma potencia $n$, logo estaria dada por:\n",
+    "\n",
+    "$$\n",
+    "F - k m |v|^n \\frac{{\\bf v}}{|v|},\n",
+    "$$\n",
+    "\n",
+    "onde o termo $-\\frac{{\\bf v}}{|v|}$  asegura que a força seja oposta ao movimento. As equações de movimento ficariam:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d v_x}{dt} = k v_x^n \\frac{v_x}{|v|} \\; \\;,  \\frac{d v_z}{dt} = -g - k v_y^n \\frac{v_y}{|v|}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{d x}{dt} = v_x \\; \\;,  \\frac{d z}{dt} = v_z\n",
+    "$$\n",
+    "\n",
+    "com, $|v| = \\sqrt{v_x^2 + v_y^2}$."
    ]
   },
   {
@@ -354,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
