--- a/00-intro.ipynb
+++ b/00-intro.ipynb
@@ -56,12 +56,13 @@
     "20. [Interpolação e extrapolação 2](09b-cubic_splines.ipynb)\n",
     "<img src=\"Figs/extrapolation-points.png\" width=50% >\n",
     "21. Prova prática 2\n",
-    "22. Algebra matricial 1\n",
-    "23. Algebra matricial 2\n",
+    "22. [Algebra matricial 1](10-algebra-linear.ipynb)\n",
+    "23. [Algebra matricial 2](10-algebra-linear.ipynb)\n",
     "24. Analise de séries temporais 1\n",
     "25. Analise de séries temporais 2\n",
-    "26. Solução de equações diferenciais ordinárias EDO 1\n",
-    "27. EDO 2\n",
+    "26. [Solução de equações diferenciais ordinárias EDO 1](11-EDO.ipynb)\n",
+    "27. [EDO 2](EDO2.ipynb)\n",
+    "28. [EDO 3, graficando linhas de campo e diagramas de contorno](EDO3.ipynb)\n",
     "28. Introudução a inteligencia artificial\n",
     "29. Aprendizado de máquina\n",
     "<img src=\"Figs/machine-learning.png\" width=50% >\n",
