--- a/00-intro.ipynb
+++ b/00-intro.ipynb
@@ -63,8 +63,7 @@
     "26. [Solução de equações diferenciais ordinárias EDO 1](11-EDO.ipynb)\n",
     "27. [EDO 2](EDO2.ipynb)\n",
     "28. [EDO 3, graficando linhas de campo e diagramas de contorno](EDO3.ipynb)\n",
-    "28. Introudução a inteligencia artificial\n",
-    "29. Aprendizado de máquina\n",
+    "28. [Introudução a redes neurais e aprendizado de máquina](12-redes_neurais.ipynb)\n",
     "<img src=\"Figs/machine-learning.png\" width=50% >\n",
     "30. Prova prática 3.\n",
     "\n",
