--- a/01-linux-vim.ipynb
+++ b/01-linux-vim.ipynb
@@ -42,11 +42,11 @@
     "\n",
     "## Breve historia do Linux\n",
     "\n",
-    "[1972](https://en.wikipedia.org/wiki/C_(programming_language)) - Surgimento da linguagem C (Ken Thompson e Dennis Ritchie, quens trabalhavam na Bell Labs). Diferentes empresas criaram compiladores, proprietarios, de C  \n",
-    "[1987](https://en.wikipedia.org/wiki/GNU_Compiler_Collection) - O compilador de C, livre, gratuito, e de código aberto,  GNU,  é desenvolvido pela Free Software Foundation, criada por Richard Stallman, entre outros  \n",
+    "[1972](https://en.wikipedia.org/wiki/C_(programming_language)) - Surgimento da linguagem C (Ken Thompson e Dennis Ritchie, que trabalhavam na Bell Labs). Diferentes empresas criaram compiladores, proprietarios, de C  \n",
+    "[1987](https://en.wikipedia.org/wiki/GNU_Compiler_Collection) - O compilador de C, livre, gratuito, e de código aberto,  GNU,  foi desenvolvido pela Free Software Foundation, criada por Richard Stallman, entre outros  \n",
     "[1991](https://en.wikipedia.org/wiki/History_of_Linux) - Linus Torvalds desenvolve o Kernel para controlar um processador 80386. Para executar o código, escrito em C, no processador,  Linus usou o compilador GNU. Já que um Kernel não serve de nada sem um compilador e uma terminal e muitas bibliotecas, Linus publicou seu código usando a licencia GNU, a qual é usada no compilador e bibliotecas que ele usou.  A partir de então o sistema operativo se conhece como GNU-Linux.  \n",
     "\n",
-    "Graças à licência GNU, existem centos de diferentes distribuições: Debian, Slackware, Red Hat, Ubuntu, Elementary, etc ...    \n",
+    "Graças à licência GNU, existem centos de diferentes distribuições: Debian, Slackware, Red Hat, Ubuntu, Mint, etc ...    \n",
     "\n",
     "Mesmo sendo pouco usado como desktop, onde Microsoft é ainda o preferido, Linux é a linguagem mais usada em servidores (inclusive os servidores de Microsoft funcionam baixo alguma versão do kernel GNU-Linux).  O sistema operacional de \"smartphones\", Android,  é baseado em Linux e existe em 75% dos telefones do mundo.  \n",
     "\n",
@@ -79,7 +79,10 @@
    "source": [
     "## A terminal de Linux\n",
     "\n",
-    "Uma terminal é uma interface que interpreta comandos e \"scripts\" dos usuarios indicando ações ao computador. Ou seja, atraves da terminal o usuario disse ao computador o qué fazer. \n",
+    "Uma terminal é uma interface que interpreta comandos e \"scripts\" dos usuarios indicando ações ao computador. Ou seja, atraves da terminal o usuario disse ao computador o qué fazer.  Um excelente livro sobre como usar a terminal se encontra no seguinte link:\n",
+    "\n",
+    "[The Linux Comand Line](http://linuxcommand.org/tlcl.php)\n",
+    "\n",
     "\n",
     "### Principais comandos de navegação\n",
     "\n",
@@ -97,6 +100,8 @@
     "    \n",
     "  \n",
     "**file**: Encontra que tipo de arquivo é (e.g., **file /bin/ls** disse que \"ls\" é um arquivo executável)\n",
+    "\n",
+    "**touch**: cria arquivos vazios (e.g., **touch aula1.txt** vai criar um arquivo sem conteúdo chamado aula1.txt) \n",
     "  \n",
     "**cat**: Mostra o conteúdo de um arquivo na tela  \n",
     "  \n",
@@ -121,7 +126,9 @@
     "  \n",
     "**locate**: Forma rápida de encontrar arquivos em qualquer local do SO, o comando \"locate cap01\" indicará onde se encontrarm todos os arquivos que tenham a palavra cap01  \n",
     "  \n",
-    "**find**: Serve para procurar por arquivos que tenham certos padrões, e.g., o comando \"find . -name \\*py\" vai procurar no diretorio atua todos os arquivos com as palavras py no nome\n",
+    "**find**: Serve para procurar por arquivos que tenham certos padrões, e.g., o comando \"find . -name \\*py\" vai procurar no diretorio atual todos os arquivos com as palavras py no nome\n",
+    "\n",
+    "**grep**: serve para procurar padrões de texto em documentos, e.g., o comando \"grep 'print' \\*.py\" ira mostrar quais arquivos de python, dentro do diretorio atual possuem a instrução *print*. \n",
     "\n",
     "***\n",
     "\n",
@@ -258,21 +265,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
