--- a/EDO2.ipynb
+++ b/EDO2.ipynb
@@ -458,11 +458,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Atividade\n",
+    "\n",
+    "1. Crie uma animação que permita visualizar os resultados do modelo do péndulo\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -488,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
