--- a/12-redes_neurais.ipynb
+++ b/12-redes_neurais.ipynb
@@ -22,20 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/guerrero/Gh-projects/icfis/DeepLearningPython35-master\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-973064789abf>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-973064789abf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    cd DeepLearningPython35\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# Vamos primeiro ao diretorio do codigo\n",
-    "cd DeepLearningPython35-master/"
+    "cd DeepLearningPython35"
    ]
   },
   {
@@ -69,7 +70,7 @@
    "source": [
     "# Importamos o modulo da rede neural\n",
     "\n",
-    "import network"
+    "    import network"
    ]
   },
   {
@@ -160,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
