--- a/01-linux-vim.ipynb
+++ b/01-linux-vim.ipynb
@@ -101,7 +101,9 @@
     "  \n",
     "**file**: Encontra que tipo de arquivo é (e.g., **file /bin/ls** disse que \"ls\" é um arquivo executável)\n",
     "\n",
-    "**touch**: cria arquivos vazios (e.g., **touch aula1.txt** vai criar um arquivo sem conteúdo chamado aula1.txt) \n",
+    "**touch**: cria arquivos vazios (e.g., **touch aula1.txt** vai criar um arquivo sem conteúdo chamado aula1.txt)\n",
+    "\n",
+    "**echo**: imprime na um texto entre aspas(e.g., **echo \"olá mundo\"**)\n",
     "  \n",
     "**cat**: Mostra o conteúdo de um arquivo na tela  \n",
     "  \n",
@@ -119,6 +121,17 @@
     "**mkdir**: Cria um diretorio (e.g., **mkdir ./meu_nome**)  \n",
     "  \n",
     "**rmdir**: Apaga diretorio, similar a **rm -R**\n",
+    "\n",
+    "**>  :** dirige um texto a um arquivo de saida (e.g., **echo \"ola mundo\" > aula1.txt**)\n",
+    "\n",
+    "** >> :** adiciona texto a um arquivo de saida (e.g., **echo \"este é meu primeiro arquivo criado usando a terminal\" >> aula1.txt**)\n",
+    "\n",
+    "#### Atividade\n",
+    "\n",
+    "Descargue o arquivo [Feynman]()\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "### Encontrando coisas\n",
     "  \n",
