--- a/01-linux-vim.ipynb
+++ b/01-linux-vim.ipynb
@@ -126,12 +126,6 @@
     "\n",
     "** >> :** adiciona texto a um arquivo de saida (e.g., **echo \"este é meu primeiro arquivo criado usando a terminal\" >> aula1.txt**)\n",
     "\n",
-    "#### Atividade\n",
-    "\n",
-    "Descargue o arquivo [Feynman]()\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "### Encontrando coisas\n",
     "  \n",
@@ -145,17 +139,34 @@
     "\n",
     "***\n",
     "\n",
-    "## Atividade\n",
+    "\n",
+    "### Atividade\n",
     "\n",
     "1. No seu diretorio, dentro do home, crie um novo diretorio com seu nome\n",
-    "2. Nesse diretorio crie uma serie de arquivos e diretorios\n",
-    "3. Mude o nome desses arquivos e diretorios\n",
-    "4. Apague um desses diretorios que tem arquivos dentro dele\n",
-    "5. Mova um arquivo de um diretorio para outro e ao mesmo tempo mude o nome desse arquivo\n",
-    "6. Verifique o conteúdo dos arquivos /etc, /src e /usr/bin\n",
     "\n",
+    "2. Identifique com **ls** se dentro da pasta do curso se encontra  o arquivo [Feynman](texto_feynman.txt)\n",
     "\n",
+    "3. Copie o arquivo \"texto_feynman.txt\" desde a pasta do curso até a pasta criada com seu nome\n",
     "\n",
+    "2. Dentro dessa pasta crie um arquivo chamado \"feynman_intro.txt\" \n",
+    "\n",
+    "3. Utilizando o comando `cat` repasse o conteudo do arquivo de texto_feynman.txt a feynman_intro.txt\n",
+    "\n",
+    "4. Agora usando o comando `head` copie as primeiras linhas de \"texto_feynman.txt\" a um arquivo chamado \"feynman_intro2.txt\"\n",
+    "\n",
+    "5. Adicione a esse texto as linhas do ultimo paragrafo usando `tail`\n",
+    "\n",
+    "6. Dentro da pasta com seu nome apague o arquivo \"texto_feynman.txt\"\n",
+    "\n",
+    "7. Com qual comando verificaria quais arquivos dos que se encontram na sua pasta tem extensão \".txt\"?\n",
+    "\n",
+    "9. Usando o comando `grep` identifique quantas vezes se encontra escrita a palavra \"física\" no arquivo \"feynman_intro.txt\"\n",
+    "\n",
+    "10. Saia da pasta com seu nome. Copie ela com o nome do seu colega de trabalho no dia de hoje\n",
+    "\n",
+    "11. Apague sua pasta\n",
+    "\n",
+    "12. usando o \n",
     "\n",
     "\n"
    ]
