--- a/01-linux-vim.ipynb
+++ b/01-linux-vim.ipynb
@@ -166,9 +166,7 @@
     "\n",
     "11. Apague sua pasta\n",
     "\n",
-    "12. usando o \n",
-    "\n",
-    "\n"
+    "12. usando o comando `find` identifique quantos arquivos \".txt\" se encontram na pasta com o nome do seu colega de trabalho.\n"
    ]
   },
   {
