--- a/09b-cubic_splines.ipynb
+++ b/09b-cubic_splines.ipynb
@@ -126,7 +126,9 @@
     "                          v_{n-1} \\end{bmatrix}.\n",
     "$$\n",
     "\n",
-    "Essa matriz resolve um sistema tridiagonal de equações, ou seja, so as 3 diagonais principais tem elementos. Esse sistema pode ser resolvido por substituição. Como sistemas desse tipo aparecem com frequência em problemas numéricos, existem rotinas sofisticadas para resolve-los. "
+    "Essa matriz resolve um sistema tridiagonal de equações, ou seja, so as 3 diagonais principais tem elementos. Esse sistema pode ser resolvido por substituição. Como sistemas desse tipo aparecem com frequência em problemas numéricos, existem rotinas sofisticadas para resolve-los. \n",
+    "\n",
+    "Uma vez encontradas as segundas derivadas, $f_i$, encontramos os $n$ polinomios substituindo as segundas derivadas na equação para $s_i(x)$.\n"
    ]
   },
   {
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17740da5f8>"
+       "<matplotlib.legend.Legend at 0x7f988b30c278>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -226,7 +228,7 @@
     "1. Uma representação da curva com `splines`\n",
     "2. os `splines` são avaliados em qualquer ponto arbitrario\n",
     "\n",
-    "A função splrep calcula a representação dos splines a saida é uma tubla que tem $(t,c,k)$, $t$ são so pontos \n",
+    "A função `splrep` calcula a representação dos splines a saida é uma tupla que tem $(t,c,k)$, $t$ são so pontos,\n",
     "$c$ são os coeficientes, e $k$ a ordem.  O parâmetro $s$ especifica quanto a curva vai ser suavizada. O valor padrão de s é $m - \\sqrt{(2m)}$, onde $m$ é o número de pontos sendo ajustados. \n",
     "\n",
     "**Para não suavizar a curva devemos usar então $s=0$**."
@@ -234,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Uma vez que a representação em *splines* foi determinada, podemos calcular pontso interpolados usando a função `splev`."
+    "Uma vez que a representação em *splines* foi determinada, podemos calcular pontos interpolados usando a função `splev`."
    ]
   },
   {
@@ -324,16 +326,16 @@
     "Vamos interpolar a função de Runge, $f(x) = \\frac{1}{1+25x^2}$, num conjunto de $n$ nós regularmente espaçados\n",
     "\n",
     "$$\n",
-    "x_k = -1 + \\frac{2(k-1)}{n-1}, \\; \\; k = 1,2, \\ldots , n\n",
+    "x_k = -1 + \\frac{2(k-1)}{n-1}, \\; \\; k = 1,2,3, \\ldots , n\n",
     "$$\n",
     "\n",
-    "1. Considere $n = 5, 11, 21, 30$ e calcule os polinomios de intepolação de Lagrange $P_N (x)$ para 41 pontos regularmente espaçados.\n",
+    "1. Considere os $n=4,6,8,11$ e calcule os polinomios de intepolação de Lagrange $P_N (x)$ para 41 pontos regularmente espaçados.\n",
     "\n",
     "2. Calcule o erro específico no cálculo usando $\\epsilon = \\frac{f(x) - P_N(x)}{f(x)}$. \n",
     "\n",
-    "2. Aumente o número de pontos conhecidos de 4 para 6 e para 8, descreva o resultado.  Aumentar o número de pontos melhora o resultado?\n",
+    "2. Aumente o número de pontos conhecidos de 5 para 11 e para 21, descreva o resultado.  Aumentar o número de pontos melhora o resultado?\n",
     "\n",
-    "3. Agora utilize *splines* cúbicos e calcule o polinomio de interpolação $S(x)$ para 41 pontos regularmente espaçados. Os pontos conhecidos iniciais são os 4 do ponto 1. Repita para 6 e para 8 pontos igualmente espaçados. \n",
+    "3. Agora utilize *splines* cúbicos e calcule o polinomio de interpolação $S(x)$ para 41 pontos regularmente espaçados. Os pontos conhecidos iniciais são  4 tal como no ponto 1. Repita para 6 e para 8 pontos igualmente espaçados. \n",
     "\n",
     "4. Calcule o erro, $\\epsilon = \\frac{f(x) - S(x)}{f(x)}$. O aumento de número de pontos conhecidos melhora a interpolação?\n",
     "\n",
@@ -364,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
