--- a/09a-interpolacao-Lagrange.ipynb
+++ b/09a-interpolacao-Lagrange.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
     "Por exemplo, se temos unicamente dois pontos (uma linha reta), então o polinomio ficara:\n",
     "\n",
     "\\begin{equation}\n",
-    "P_1(x) =  \\frac{x - x_0}{x_1 - x_0} y_1 + \\frac{x - x_1}{x0 - x_1} y_0\n",
+    "P_1(x) =  \\frac{x - x_0}{x_1 - x_0} y_1 + \\frac{x - x_1}{x_0 - x_1} y_0\n",
     "\\end{equation}\n",
     "\n",
     "e com 3 pontos (aproximação parabólica) temos:\n",
@@ -164,12 +164,12 @@
     "C_{i,j} &=& \\frac{(x_i - x) (C_{i+1,j+1} - D_{i,j+1})}{x_i-x_j}\n",
     "\\end{eqnarray}\n",
     "\n",
-    "A cada nível $m$, os valores de $C$ e $D$ são correções que levam a interpolação a uma ordem maior. O resultado finalé a soma de todos os $C's$ e/ou $D's$ que formam o caminho atraves da árbore até o ponto mais à direita. O seguinte algorítmo considera essa implementação do metodo de Neville. "
+    "A cada nível $m$, os valores de $C$ e $D$ são correções que levam a interpolação a uma ordem maior. O resultado final é a soma de todos os $C's$ e/ou $D's$ que formam o caminho atraves da árbore até o ponto mais à direita. O seguinte algorítmo considera essa implementação do metodo de Neville. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
