--- a/08-leitura_escritura.ipynb
+++ b/08-leitura_escritura.ipynb
@@ -16,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -42,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.savetxt(\"test2.txt\", x, fmt=\"%2.3f\", delimiter=\",\")\n",
@@ -68,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.savetxt('nome_arquivo.txt', x, fmt='%.18e', delimiter=' ', \\\n",
@@ -92,7 +98,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# para abrir o arquivo\n",
@@ -121,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y = np.loadtxt('teste.txt')"
@@ -159,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x,y,z = np.loadtxt('teste.txt')"
@@ -278,7 +290,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tempo, posicao = np.load('temp_vs_pos.npy')"
@@ -331,8 +345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -340,37 +356,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# a variavel names é uma lista de strings onde podemos\n",
     "# colocar nome a cada uma das colunas do arquivo\n",
     "\n",
-    "al = pd.read_csv('alumni/20182_DIG.csv',header=2, \\\n",
+    "al = pd.read_csv('20191_DIG_ICE064.csv',header=2, \\\n",
     "                     names=['index','matricula','nomes'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -386,47 +404,47 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>2012027240</td>\n",
-       "      <td>ALINE ANDRADE DO NASCIMENTO</td>\n",
+       "      <td>2016034259</td>\n",
+       "      <td>ALINE RIBEIRO</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>2015105608</td>\n",
-       "      <td>ANA CLARA MAGALHAES BARCELOS</td>\n",
+       "      <td>2018050430</td>\n",
+       "      <td>AMANDA APARECIDA DUARTE ALMEIDA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>2018050839</td>\n",
-       "      <td>BARBARA ALVES LAND FERREIRA</td>\n",
+       "      <td>2018050456</td>\n",
+       "      <td>ARTHUR FAGUNDES VIANA TOMAZ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>2017019261</td>\n",
-       "      <td>BEATRIZ DE SOUZA PANCRACIO DE ERRICO</td>\n",
+       "      <td>2018050847</td>\n",
+       "      <td>ARTUR ALMEIDA DIAS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>2018050995</td>\n",
-       "      <td>CAYRO TEIXEIRA DE SIQUEIRA NETO</td>\n",
+       "      <td>2017076486</td>\n",
+       "      <td>BARBARA REGINA MELO RIBEIRO</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index   matricula                                 nomes\n",
-       "0      1  2012027240           ALINE ANDRADE DO NASCIMENTO\n",
-       "1      2  2015105608          ANA CLARA MAGALHAES BARCELOS\n",
-       "2      3  2018050839           BARBARA ALVES LAND FERREIRA\n",
-       "3      4  2017019261  BEATRIZ DE SOUZA PANCRACIO DE ERRICO\n",
-       "4      5  2018050995       CAYRO TEIXEIRA DE SIQUEIRA NETO"
+       "   index   matricula                            nomes\n",
+       "0      1  2016034259                    ALINE RIBEIRO\n",
+       "1      2  2018050430  AMANDA APARECIDA DUARTE ALMEIDA\n",
+       "2      3  2018050456      ARTHUR FAGUNDES VIANA TOMAZ\n",
+       "3      4  2018050847               ARTUR ALMEIDA DIAS\n",
+       "4      5  2017076486      BARBARA REGINA MELO RIBEIRO"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,19 +455,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 41 entries, 0 to 40\n",
+      "RangeIndex: 40 entries, 0 to 39\n",
       "Data columns (total 3 columns):\n",
-      "index        41 non-null int64\n",
-      "matricula    41 non-null int64\n",
-      "nomes        41 non-null object\n",
+      "index        40 non-null int64\n",
+      "matricula    40 non-null int64\n",
+      "nomes        40 non-null object\n",
       "dtypes: int64(2), object(1)\n",
       "memory usage: 1.0+ KB\n"
      ]
@@ -457,6 +477,66 @@
    ],
    "source": [
     "al.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     2016034259\n",
+       "1     2018050430\n",
+       "2     2018050456\n",
+       "3     2018050847\n",
+       "4     2017076486\n",
+       "5     2018074606\n",
+       "6     2018051002\n",
+       "7     2018074622\n",
+       "8     2018050332\n",
+       "9     2018094801\n",
+       "10    2018050316\n",
+       "11    2015105667\n",
+       "12    2018074657\n",
+       "13    2014024086\n",
+       "14    2018050570\n",
+       "15    2016103820\n",
+       "16    2018074690\n",
+       "17    2018094828\n",
+       "18    2018050359\n",
+       "19    2017115856\n",
+       "20    2018094836\n",
+       "21    2016034704\n",
+       "22    2018094976\n",
+       "23    2017099206\n",
+       "24    2018050626\n",
+       "25    2018050731\n",
+       "26    2017019440\n",
+       "27    2017019245\n",
+       "28    2017076559\n",
+       "29    2018050820\n",
+       "30    2013038601\n",
+       "31    2014020994\n",
+       "32    2018050979\n",
+       "33    2018050260\n",
+       "34    2018050537\n",
+       "35    2017019024\n",
+       "36    2018050588\n",
+       "37    2018050898\n",
+       "38    2018116147\n",
+       "39    2014141236\n",
+       "Name: matricula, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "al.matricula"
    ]
   },
   {
@@ -622,7 +702,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Começamos chamando a biblioteca\n",
@@ -900,7 +982,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -921,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
